src/test/resources/semantic/sentences/error/TC_ERROR_RETURN_METHOD2.ru
/? ERROR: SEMANTICO - SENTENCIAS 
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 12 | COLUMNA 9 | Sentencia inalcanzable. |
struct A{
}

impl A{
    .(){
    }
    fn m1(Int num1)->void{
        ret;
        ret;
    }
}
start{
}
